# libsyscall-intercept-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
.cargo/: config.toml
src/: lib.rs
