[package]
name = "libsyscall-intercept"
version = "0.1.2"
edition = "2021"
authors = ["gzhuflyer <gzhuflyer@foxmail.com>"]
description = "Userspace syscall intercepting library."
readme = "README.md"
homepage = "https://github.com/GzhuFlyer/libsyscall-intercept-rs"
repository = "https://github.com/GzhuFlyer/libsyscall-intercept-rs"
license = "MIT"
keywords = ["syscall", "intercept"]


[build-dependencies]
cmake = "0.1"
bindgen = "0.65"

[dependencies]
libc = "0.2"





